infrastructure/alb.tf
resource "aws_lb" "main" {
    name               = "${var.app_name}-alb"
    internal           = false
    load_balancer_type = "application"
    security_groups    = [aws_security_group.alb.id]
    subnets            = [aws_subnet.public_1.id, aws_subnet.public_2.id]
    idle_timeout       = 300

    tags = {
      Name = "${var.app_name}-alb"
    }
  }

  resource "aws_lb_target_group" "app" {
    name        = "${var.app_name}-tg"
    port        = 8080
    protocol    = "HTTP"
    vpc_id      = aws_vpc.main.id
    target_type = "ip"

    health_check {
      path                = "/actuator/health"
      healthy_threshold   = 2
      unhealthy_threshold = 3
      interval            = 30
    }

    tags = {
      Name = "${var.app_name}-tg"
    }
  }

 resource "aws_lb_listener" "http" {
    load_balancer_arn = aws_lb.main.arn
    port              = 80
    protocol          = "HTTP"

    default_action {
      type = "redirect"

      redirect {
        port        = "443"
        protocol    = "HTTPS"
        status_code = "HTTP_301"
      }
    }
  }

  resource "aws_lb_listener" "https" {
    load_balancer_arn = aws_lb.main.arn
    port              = 443
    protocol          = "HTTPS"
    ssl_policy        = "ELBSecurityPolicy-TLS13-1-2-2021-06"
    certificate_arn   = aws_acm_certificate_validation.main.certificate_arn

    default_action {
      type             = "forward"
      target_group_arn = aws_lb_target_group.app.arn
    }
  }
