infrastructure/rds.tf
 resource "aws_db_subnet_group" "main" {
    name       = "${var.app_name}-db-subnet-group"
    subnet_ids = [aws_subnet.private_1.id, aws_subnet.private_2.id]

    tags = {
      Name = "${var.app_name}-db-subnet-group"
    }
  }

  resource "aws_db_instance" "main" {
    identifier        = "${var.app_name}-db"
    engine            = "postgres"
    engine_version    = "16"
    instance_class    = "db.t3.micro"
    allocated_storage = 20
    storage_encrypted = true
    backup_retention_period = 7

    db_name  = var.db_name
    username = var.db_username
    password = var.db_password

    db_subnet_group_name   = aws_db_subnet_group.main.name
    vpc_security_group_ids = [aws_security_group.rds.id]

    skip_final_snapshot = true
    publicly_accessible = false

    tags = {
      Name = "${var.app_name}-db"
    }
  }
