infrastructure/security_groups.tf
resource "aws_security_group" "alb" {
    name        = "${var.app_name}-alb-sg"
    description = "Allow inbound HTTP traffic to the ALB"
    vpc_id      = aws_vpc.main.id

    ingress {
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
      }

    egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
      Name = "${var.app_name}-alb-sg"
    }
  }

  resource "aws_security_group" "ecs" {
    name        = "${var.app_name}-ecs-sg"
    description = "Allow inbound traffic from ALB to ECS tasks"
    vpc_id      = aws_vpc.main.id

    ingress {
      from_port       = 8080
      to_port         = 8080
      protocol        = "tcp"
      security_groups = [aws_security_group.alb.id]
    }

    egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
      Name = "${var.app_name}-ecs-sg"
    }
  }

  resource "aws_security_group" "rds" {
    name        = "${var.app_name}-rds-sg"
    description = "Allow inbound PostgreSQL traffic from ECS tasks only"
    vpc_id      = aws_vpc.main.id

    ingress {
      from_port       = 5432
      to_port         = 5432
      protocol        = "tcp"
      security_groups = [aws_security_group.ecs.id]
    }

    egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
      Name = "${var.app_name}-rds-sg"
    }
  }
